# TwistEstimator

./: CMakeLists.txt  Develop.md  README.md  eval.sh  package.xml
back-end/: CMakeLists.txt  twist_estimator_node.cpp
back-end/estimator/: TwistEstimator.h  trajectory_estimator 4 _ 3  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_estimator2.cpp  trajectory_estimator2.h  trajectory_estimator2_5-28-loose-opti  trajectory_estimator_copy  trajectory_estimator_options.h
back-end/factor/: DebugFile.cpp  DebugFile.h  TwistFactor 4 2 coy  TwistFactor copy 4 3  TwistFactor copy-5-27  TwistFactor.h  TwistFactor_1-_9-beifen  TwistFactor_3_18-beifen  TwistFactor_3_20  TwistFactor_3_22  TwistFactor_4_1  TwistFactor_beifen  ceres_local_param.h  marginalization_factor.cpp  marginalization_factor.h  rd_spline_view.h  so3_spline_view.h  split_spline_view.h  trajectory_value_factor.h
back-end/spline/: ceres_spline_helper.h  ceres_spline_helper_jet.h  r3_spline copy  r3_spline.h  rd6_spline copy  rd6_spline.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h  spline_segment.h  trajectory.cpp  trajectory.h  twist_trajectory.cpp  twist_trajectory.h
back-end/test/: test_Add_bias.cpp  test_Detector2 copy  test_Detector2.cpp  test_Estimator.cpp  test_Estimator2.cpp  test_Estimator3.cpp  test_Estimator_IWE.cpp  test_Matrix.cpp
back-end/utils/: ceres_callbacks.h  cloud_tool.h  eigen_utils.hpp  log_utils.h  math_utils.h  opt_weight.h  parameter_struct.cpp  parameter_struct.h  sophus_utils.hpp
config/: calibration_camera_DAVIS346_00000639-2024_12_23_15_57_44.xml  calibration_camera_DVXplorer_DXA00025-2025_02_19_22_06_41.xml  demo.yaml  demo_228.yaml  dji.yaml  dji10.yaml  dji17.yaml  dji2 copy  dji2 copy 10-7  dji2.yaml  dji3.yaml  dvs.yaml  hand.yaml  lab.yaml  radar_param.yaml  radar_param_9_19_beifen  radar_param_dji.yaml  radar_param_dji_copy.yaml  radar_param_hand.yaml  radar_param_mocap.yaml  radar_param_road.yaml  road.yaml  rviz_config.rviz  rviz_config2.rviz  rviz_default.rviz
config/param_in_all_seq/: dji8-50.param
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
eval/: plot_twist_with_time_with_umeyama_rotation_aligned.py  plot_twist_with_time_with_umeyama_rotation_aligned2 (copy).py  plot_twist_with_time_with_umeyama_rotation_aligned2-2.py  plot_twist_with_time_with_umeyama_rotation_aligned2.py  plot_twist_with_time_with_umeyama_rotation_aligned2_estimate.py  plot_twist_with_time_with_umeyama_rotation_aligned3.py  plot_twist_with_time_with_umeyama_rotation_aligned4.py  plot_twist_with_time_with_umeyama_rotation_aligned4_alone_dji_10.py  plot_twist_with_time_with_umeyama_rotation_aligned4_alone_dji_10_2.py
front-end/: CMakeLists.txt
front-end/event_flow_detector/: event_ct_flow.h  event_ct_flow_LP.h  event_ct_flow_sae 5-28  event_ct_flow_sae.h  event_flow_detector.h  sae.h
front-end/imu_vel/: imu_vel.hpp
front-end/radar_ego_velocity_estimator/: data_types.h  radar_ego_velocity_estimator copy  radar_ego_velocity_estimator.cpp  radar_ego_velocity_estimator.h  radar_point_cloud.h
launch/: dji.launch  drone.urdf  estimator.launch  hand.launch  road.launch  test_detector.launch  test_detector_dvs.launch  test_estimator.launch  test_estimator3.launch  test_estimator_dji_10.launch  test_estimator_dji_17.launch  test_estimator_hand.launch  test_estimator_road.launch  test_ugv_estimator.launch  ugv_estimator.launch
launch/model/: DJImini2.urdf  DJImini22.urdf
output/: detector.twist  estimate.twist  marginize_block.txt
scripts/dji/: catch_gt_twist.py  catch_gt_twist2.py  catch_gt_twist_dji.py  catch_radar_estimator.py  catch_radar_estimator2.py  catch_radar_estimator_dji.py  catch_radar_twist.py  catch_radar_twist_dji.py  combi_radar.py  test_LK.py  visual_twist.py
scripts/dji-10/: analysis2.py  catch_radar_estimator_dji_10.py  catch_radar_twist_dji_10.py  combi_radar_dji_10.py
scripts/dji-17/: analysis.py  notice.txt  visual.py
scripts/hand/: catch_gt_pose_hand.py  catch_gt_twist_hand.py  catch_gt_twist_hand_mocap.py  catch_radar_twist_hand.py  catch_radar_twist_hand_imu.py  convert_bag.py  gener_vel.py  normal_pose_tum.py  pose.tum  pose_zeroed.bag
scripts/road/: catch_gt_twist_road.py  catch_radar_estimator_road.py  catch_radar_twist_road.py  check_radar_dist.py  twist.tum
scripts/rtk/: RTKAC_485.py  RTKAC_CAN.py  catch_rtk.py  catch_rtk2.py  output.txt
scripts/ugv/: catch_gt_twist_ugv.py  catch_radar_estimator_ugv.py  catch_radar_twist_ugv.py
src/: twist_manager.cpp  twist_manager.h  twist_node.cpp
